# rael_obj

./: Cargo.toml  README.md
source/: blahaj_tri.mtl
src/: lib.rs  main.rs
src/obj_load/: light.rs  mod.rs  texture.rs
