[package]
name = "rael_obj"
version = "0.0.2"
edition = "2024"
description = "a simple function to load obj file with lightning and transform, to draw it using rael"
license = "MIT"
repository = "https://github.com/YoussefDevPro/rael_obj"
homepage = "https://github.com/YoussefDevPro/rael_obj"
keywords = ["terminal", "tui", "console", "graphics", "renderer"]
categories = ["command-line-utilities", "games"]

[dependencies]
crossterm = "0.29.0"
image = "0.25.8"
obj-rs = "0.7.4"
rael = "0.1.2"
rayon = "1.11.0"
